trying to fix navbar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #0a192f;
   color: #e6f1ff;
@@ -17,11 +23,6 @@ body {
 }
 
 @media (max-width: 1000px) {
-  body {
-    max-width: 100vw;
-    overflow-x: hidden;
-  }
-
   nav .nav__links {
     position: absolute;
     z-index: 5;
@@ -61,7 +62,6 @@ nav button {
     height: 100%;
     width: 100%;
     background-color: #0a192f;
-    filter: blur(30px);
   }
   nav .hamburger {
     display: block;
