--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -1,4 +1,10 @@
 @use "../utils/color" as clr;
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background-color: clr.$navy;
   color: clr.$off-white;
