--- a/sass/utils/_breakpoint.scss
+++ b/sass/utils/_breakpoint.scss
@@ -1,10 +1,6 @@
 @use "../utils/color" as clr;
 
 @media (max-width: 1000px) {
-  body {
-    max-width: 100vw;
-    overflow-x: hidden;
-  }
   nav {
     .nav__links {
       position: absolute;
@@ -49,7 +45,7 @@
       height: 100%;
       width: 100%;
       background-color: clr.$navy;
-      filter: blur(30px);
+      // filter: blur(10px);
     }
     .hamburger {
       display: block;
